# EmexFoundation

./: CMakeLists.txt  Makefile  README.md
include/EmexFoundation/: EFArray.h  EFBitWalker.h  EFData.h  EFFile.h  EFFileHandle.h  EFMapping.h  EFNumber.h  EFPage.h  EFPageGroup.h  EFProcess.h  EFString.h  EFURL.h  EFUUID.h  EmexFoundation.h
include/EmexFoundation/CrossSupport/: memfd.h  vfd.h
include/EmexFoundation/EFRuntime/: EFAllocator.h  EFBase.h  EFClass.h  EFEndian.h  EFObject.h  EFRuntime.h
include/EmexFoundation/runtime/: EFAllocator.h  EFBase.h  EFClass.h  EFObject.h  EFRuntime.h
include/evObj/: EVData.h  EVNumber.h  EVPage.h  EVPageGroup.h  EVString.h  alloc.h  base.h  defs.h  evObj.h  heap.h  lock.h  reference.h  register.h
include/evObj/runtime/: EVBase.h  alloc.h  base.h  defs.h  reference.h  register.h
src/: EFArray.c  EFBitWalker.c  EFData.c  EFFile.c  EFFileHandle.c  EFMapping.c  EFNumber.c  EFPage.c  EFPageGroup.c  EFProcess.c  EFString.c  EFURL.c  EFUUID.c  EVArray.c  EVData.c  EVNumber.c  EVPage.c  EVPageGroup.c  EVString.c  alloc.c  base.c  heap.c  reference.c  register.c
src/CrossSupport/: memfd.c  vfd.c
src/EFRuntime/: EFAllocator.c  EFBase.c
src/runtime/: EFAllocator.c  EFBase.c  EVAllocator.c  EVBase.c  alloc.c  base.c  reference.c  register.c
src/runtime/objc/: test.m
